# Kanna

./: .breakpoints  .replit  README.md  history  learned_words  main.py  main2.py  pyproject.toml
