[tool.poetry]
name = "repl_python3_my-advanced-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
python-decouple = "^3.4"
Flask = "^2.0.1"
replit = "^3.2.4"
pymongo = "^3.12.0"
randfacts = "^0.15.0"
deep-translator = "^1.5.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
